; ModuleID = '/home/carl/AnghaBench/Cinder/src/glfw/src/extr_mir_window.c_handlePointerEvent.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/glfw/src/extr_mir_window.c_handlePointerEvent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLFW_PRESS = common dso_local global i32 0, align 4
@GLFW_RELEASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @handlePointerEvent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handlePointerEvent(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @mir_pointer_event_action(i32* %6)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %24 [
    i32 132, label %9
    i32 131, label %14
    i32 128, label %19
    i32 130, label %23
    i32 129, label %23
  ]

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* @GLFW_PRESS, align 4
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @handlePointerButton(i32* %10, i32 %11, i32* %12)
  br label %25

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @GLFW_RELEASE, align 4
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @handlePointerButton(i32* %15, i32 %16, i32* %17)
  br label %25

19:                                               ; preds = %2
  %20 = load i32*, i32** %4, align 8
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @handlePointerMotion(i32* %20, i32* %21)
  br label %25

23:                                               ; preds = %2, %2
  br label %25

24:                                               ; preds = %2
  br label %25

25:                                               ; preds = %24, %23, %19, %14, %9
  ret void
}

declare dso_local i32 @mir_pointer_event_action(i32*) #1

declare dso_local i32 @handlePointerButton(i32*, i32, i32*) #1

declare dso_local i32 @handlePointerMotion(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
